logo centered. added past highlights

--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -204,6 +204,53 @@
                 <!-- End Masonry Grid -->
             </div>
 
+            <div class="content-lg container margin-b-10" style='background:rgba(245, 245, 220, 0.6);margin-top:-90px;width:100%'>
+              <div class="row margin-b-40" style="margin-left:40px;">
+                  <div class="col-sm-6">
+                      <h2>PAST HIGHLIGHTS</h2>
+                  </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-4 col-md-2">
+                  <div class='past-highlights'>
+                    <span style = 'color: black'><i class="fa fa-users past-highlights-symbol" aria-hidden="true"></i></span>
+                    <span style = 'color: black' class='past-highlights-info'> 15000+ Registrations </span>
+                  </div>
+                </div>
+                <div class="col-sm-4 col-md-2">
+                  <div class='past-highlights'>
+                    <span style = 'color: black'><i class="fa fa-inr past-highlights-symbol" aria-hidden="true"></i></span>
+                    <span style = 'color: black' class='past-highlights-info'> 10 lakh prize money </span>
+                  </div>
+                </div>
+                <div class="col-sm-4 col-md-2">
+                  <div class='past-highlights'>
+                    <span style = 'color: black'><i class="fa fa-university past-highlights-symbol" aria-hidden="true"></i></span>
+                    <span style = 'color: black' class='past-highlights-info'> 313 Institutes </span>
+                  </div>
+                </div>
+                <div class="col-sm-4 col-md-2">
+                  <div class='past-highlights'>
+                    <span style = 'color: black'><i class="fa fa-flag past-highlights-symbol" aria-hidden="true"></i></span>
+                    <span style = 'color: black' class='past-highlights-info'> 50+ Rounds </span>
+                  </div>
+                </div>
+                <div class="col-sm-4 col-md-2">
+                  <div class='past-highlights'>
+                    <span style = 'color: black'><i class="fa fa-calendar past-highlights-symbol" aria-hidden="true"></i></span>
+                    <span style = 'color: black' class='past-highlights-info'> 15+ Events </span>
+                  </div>
+                </div>
+                <div class="col-sm-4 col-md-2">
+                  <div class='past-highlights'>
+                    <span style = 'color: black'><i class="fa fa-building past-highlights-symbol" aria-hidden="true"></i></span>
+                    <span style = 'color: black' class='past-highlights-info'> 25+ Corporates </span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
             <div id = 'intaglio-over-years'>
                 <div class="content-lg container">
                     <div class="row justify-content-md-center">
