Revert "speakers for website done"
This reverts commit df71dc155eb570eb9c6b3ce0f9d8a0f180fd8449.

--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -318,107 +318,35 @@
 
                 <div class="row">
                     <!-- Speakers -->
-                    <div class="col-sm-3 col-md-4 margin-b-10">
-                      <div class='speaker-img'>
-                        <img class='img-responsive' src="img/speakers/shashi_tharoor.jpg" alt="Clients Logo">
-                        <div class="caption">
-                          <span>Shashi Tharoor</span>
-                          <hr>
-                          <span>MP, Lok Sabha</span>
+                    <div class="col-sm-4 sm-margin-b-50">
+                        <div class="margin-b-20">
+                            <img class="img-responsive" src="img/speakers/speaker_3.jpg" alt="Speakers Image">
                         </div>
-                      </div>
+                        <h4>DR. SHASHI THAROOR</h4>
+                        <p>Dr. Shashi Tharoor is an Indian politician and a former diplomat who is currently serving as Member of Parliament of India. He also currently serves as Chairman of the Parliamentary Standing Committee on External Affairs. He is a member of the Indian National Congress
+                        </p>
+                        <!-- <a class="link" href="#">More Details</a> -->
                     </div>
                     <!-- End Speakers -->
 
                     <!-- Speakers -->
-                    <div class="col-sm-3 col-md-4 margin-b-10">
-                      <div class='speaker-img'>
-                        <img class='speaker-img img-responsive' src="img/speakers/bunty.jpg" alt="Clients Logo">
-                        <div class="caption">
-                          <span>Bunty Bohra</span>
-                          <hr>
-                          <span>MD, Goldman Sachs</span>
+                    <div class="col-sm-4 sm-margin-b-50">
+                        <div class="margin-b-20">
+                            <img class="img-responsive" src="img/speakers/speaker_2.jpg" alt="Speakers Image">
                         </div>
-                      </div>
+                        <h4>SHRIJEET MISHRA</h4>
+                        <p>Shrijeet Mishra, COO, Bennett Coleman & Company Limited, is a Wharton Alumnus and an economics graduate from Hindu College, Delhi, and he completed his management from IIM-Ahmedabad, for which he is extremely thankful for the foundation that was laid at DM and Ravenshaw.</p>
                     </div>
                     <!-- End Speakers -->
 
                     <!-- Speakers -->
-                    <div class="col-sm-3 col-md-4 margin-b-10">
-                      <div class='speaker-img'>
-                        <img class='speaker-img img-responsive' src="img/speakers/derek.jpg" alt="Clients Logo">
-                        <div class="caption">
-                          <span>Derek O'Brien</span>
-                          <hr>
-                          <span>MP, Rajya Sabha</span>
+                    <div class="col-sm-4 sm-margin-b-50">
+                        <div class="margin-b-20">
+                            <img class="img-responsive" src="img/speakers/speaker_1.jpg" alt="Speakers Image">
                         </div>
-                      </div>
+                        <h4>SOURAV GANGULY</h4>
+                        <p>Sourav Ganguly, affectionately known as Dada, is a former cricketer and captain of the Indian national team. Currently, he is appointed as the honourable President of the CAB and President of the Editorial Board with Wisden India. He is regarded as one of India's most successful captains in modern times.</p>
                     </div>
-
-                    <div class="col-sm-3 col-md-4 margin-b-10">
-                      <div class='speaker-img'>
-                        <img class='speaker-img img-responsive' src="img/speakers/ganguly.jpg" alt="Clients Logo">
-                        <div class="caption">
-                          <span>Sourav Ganguly</span>
-                          <hr>
-                          <span>Former Indian Cricket Captain</span>
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="col-sm-3 col-md-4 margin-b-10">
-                      <div class='speaker-img'>
-                        <img class='speaker-img img-responsive' src="img/speakers/meera.jpg" alt="Clients Logo">
-                        <div class="caption">
-                          <span>Meera Sanyal</span>
-                          <hr>
-                          <span>Ex-CEO, RBS and Politician</span>
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="col-sm-3 col-md-4 margin-b-10">
-                      <div class='speaker-img'>
-                        <img class='speaker-img img-responsive' src="img/speakers/montek.jpg" alt="Clients Logo">
-                        <div class="caption" style='top:4px;'>
-                          <span>Montek Singh Ahluwalia</span>
-                          <hr>
-                          <span>Former Dy. Chairman, Planning Commission, India</span>
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="col-sm-3 col-md-4 margin-b-10">
-                      <div class='speaker-img'>
-                        <img class='speaker-img img-responsive' src="img/speakers/prahlad.jpg" alt="Clients Logo">
-                        <div class="caption">
-                          <span>Prahlad Kakkar</span>
-                          <hr>
-                          <span>Ad film maker</span>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-sm-3 col-md-4 margin-b-10">
-                      <div class='speaker-img'>
-                        <img class='speaker-img img-responsive' src="img/speakers/shivakumar.jpg" alt="Clients Logo">
-                        <div class="caption">
-                          <span>D. Shivakumar</span>
-                          <hr>
-                          <span>CEO, Pepsico</span>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-sm-3 col-md-4 margin-b-10">
-                      <div class='speaker-img'>
-                        <img class='speaker-img img-responsive' src="img/speakers/tvnarendra.jpg" alt="Clients Logo">
-                        <div class="caption">
-                          <span>T.V. Narendra</span>
-                          <hr>
-                          <span>MD, Tata Steel</span>
-                        </div>
-                      </div>
-                    </div>
-
                     <!-- End Speakers -->
                 </div>
                 <!--// end row -->
