--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -74,7 +74,7 @@
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#events">Events</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#products">Speakers</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#workshop">Workshop</a></li>
-                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#">Regalio</a></li>
+                                <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#regalio">Regalio</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#sponsors">Sponsors</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#work">Gallery</a></li>
                                 <li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="#contact">Contact</a></li>
@@ -995,7 +995,7 @@
 
 
         <!-- Speakers -->
-        <div id="products">
+        <div id="products"  class='alternate-color'>
             <div class="content-lg container">
                 <div class="row margin-b-40">
                     <div class="col-sm-6">
@@ -1085,7 +1085,7 @@
         <!-- End Speakers -->
 
         <!--- Workshop--->
-        <div id="workshop" style='margin-top:5px' class='alternate-color'>
+        <div id="workshop" style='margin-top:5px'>
             <div class="content-lg container">
                 <div class="row margin-b-20">
                     <div class="col-sm-6">
@@ -1100,6 +1100,22 @@
             </div>
         </div>
         <!--- End Workshop --->
+
+        <!--- Regalio--->
+        <div id="regalio" style='margin-top:5px' class='alternate-color'>
+            <div class="content-lg container">
+                <div class="row margin-b-20">
+                    <div class="col-sm-6">
+                        <h2>REGALIO</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="margin-l-20">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--- End Regalio --->
 
         <!-- Sponsors -->
         <div id = 'sponsors' style='margin-top:5px'>
