about us color scheme and position

--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -171,7 +171,7 @@
         <!-- About -->
         <div id="about" style='margin-top:10px'>
           <div id = 'intaglio-over-years'>
-                <div class="content-lg container">
+                <div class="content-lg container" style='padding-top:30px!important'>
                     <div class="row margin-b-40">
                         <div class="col-sm-6">
                             <h2>ABOUT US</h2>
@@ -191,7 +191,7 @@
                             <!-- Accordion -->
                             <div class="accordion">
                                 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                                    <div class="panel panel-primary">
+                                    <div class="panel panel-warning">
                                         <div class="panel-heading" role="tab" id="headingOne">
                                             <h4 class="panel-title">
                                                 <a class="panel-title-child" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -206,7 +206,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="panel panel-primary">
+                                    <div class="panel panel-warning">
                                         <div class="panel-heading" role="tab" id="headingTwo">
                                             <h4 class="panel-title">
                                                 <a class="collapsed panel-title-child" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
