--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -161,7 +161,7 @@
           <div class="main-text hidden-xs">
             <div class='carousel-heading'>
               <div class='carousel-heading-title'>TENETS OF PROGRESSIVISM</div>
-              <div class='carousel-heading-points'>EDUCATION &bull; INCLUSION &bull; DIGITALIZATION &bull;</div>
+              <div class='carousel-heading-points'>EDUCATION &bull; INCLUSION &bull; DIGITALIZATION</div>
             </div>
           </div>
         </div>
