--- a/intaglio-v3/HTML/index.html
+++ b/intaglio-v3/HTML/index.html
@@ -98,8 +98,6 @@
             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
             <li data-target="#carousel-example-generic" data-slide-to="3"></li>
             <li data-target="#carousel-example-generic" data-slide-to="4"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="5"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="6"></li>
           </ol>
 
           <!-- Wrapper for slides -->
@@ -166,11 +164,11 @@
                     </div>
                     <div class="row" style='display:flex;align-items:center'>
                         <div class="large-screen col-md-5 col-sm-5 md-margin-b-60">
-                            <div class="margin-t-50 margin-b-30" class = 'text-over'>
+                            <div class="margin-b-30" class = 'text-over'>
                                 <!-- <h2 style='color:white'>INTAGLIO OVER THE YEARS</h2> -->
                                 <!-- <br/> -->
                                 <!-- <p style='color:white' >Intaglio is structured to comprise competitive events across various spheres of management such as Finance, Marketing, Policy, Strategy, Operations and Flagship domains with prizes worth more than INR 15 lakhs and speaker sessions on various themes.</p> -->
-                                <img src = 'img/slide_image/intag_history.jpg' id = 'slide-img' style='width: 603px;margin-top: -40px;'/>
+                                <img src = 'img/slide_image/intag_history.jpg' id = 'slide-img' style='width: 590px;'/>
                             </div>
                             <!-- <a href="#" class="btn-theme btn-theme-sm btn-white-bg text-uppercase">Explore</a> -->
                         </div>
@@ -187,7 +185,7 @@
                                             </h4>
                                         </div>
                                         <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-                                            <div class="panel-body">
+                                            <div class="panel-body" style='text-align:justify'>
                                               <img class='small-screen' src = 'img/slide_image/intag_history.jpg' id = 'slide-img' style='width:200px;margin:0 auto;'/><br/>
                                               Intaglio, the annual international business summit of IIM Calcutta has been at the epitome of management excellence since 1989. Every year the stage is set for more than 15000 students across the world to showcase the practical ideas and solutions to managerial problems. Competitive events, enlightening talks by eminent personalities and sophisticated workshops by corporates all this with a lake-side view is assured. The ball is set rolling, come and witness the most awaited summit on 15-17th December 2017.
                                             </div>
@@ -202,7 +200,7 @@
                                             </h4>
                                         </div>
                                         <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                                            <div class="panel-body">
+                                            <div class="panel-body" style='text-align:justify'>
                                               <img class='small-screen' src = 'img/imagesforwebsite/flag2.jpg' id = 'slide-img' style='width:200px;margin:0 auto;'/><br/>
                                               Progressivism is a multi-facet ideology that advocates change and reforms with its roots in the 19th century Europe. It challenges the status-quo of the system and aggressively pushes the boundaries beyond the horizon. It describes both social and economic reforms that leads to the improvement in the human condition. For our current age, this philosophy can be categorized into 3 essential tenets namely – Inclusion, Education & Digitization.
                                             </div>
